maybe final commit both send recieve completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Speedometerkeshab">
         <activity
+            android:name=".AccelRecieverView"
+            android:exported="true"
+            android:label="@string/title_activity_accel_reciever_view"
+            android:theme="@style/Theme.Speedometerkeshab">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
